# sonar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  biome.json  compose.endpoints.yml  compose.models.yml  compose.yml  docker-compose.sonar.yml  package-lock.json  package.json  tsconfig.ui.json  vite.config.ts
docs/: README.md  SUMMARY.md  api.md  book.toml  code-review-fix-plan.md  desktop-v1-implementation-plan.md  desktop.md  development.md  getting-started.md  language-support.md  launch-checklist.md  production-readiness-plan.md  retrieval.md  setup.md
grammars/: tree-sitter-tsx.wasm  tree-sitter-typescript.wasm
scripts/: check-node-runtime.mjs  check-version-sync.mjs  clean-build-output.mjs  ensure-runtime-env.mjs  run-integration-tests.mjs  sign-macos-app.mjs  verify-macos-app.mjs  wait-for-services.mjs
src/: config.ts  index.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_proxy.rs  config.rs  diagnostics.rs  export.rs  llama_sidecar.rs  main.rs  models.rs  paths.rs  process.rs  repositories.rs  services.rs  state.rs
test/: api-errors.test.ts  api-security.test.ts  api.integration.ts  briefing-eval.test.ts  briefing-evidence-planner.test.ts  briefing-workflow-planner.test.ts  citation-repair-by-selection.test.ts  citation-verifier.test.ts  config.test.ts  context-expander.test.ts  context-packer.test.ts  contextual-text.test.ts  dependency-resolver.test.ts  embedder-cache.test.ts  (+35 more)
(+145 files in other folders)
