[package]
name = "sonar-desktop"
version = "0.1.0"
description = "Sonar desktop app"
authors = ["Sonar"]
edition = "2021"
license = "MIT"
rust-version = "1.86"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-dialog = "2.4.0"
tokio = { version = "1", features = ["time"] }
